Refactor showdown finish